--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ PORT=3333
 
 #Database
 
-POSTGRES_URL="´postgresql://docker:docker@localhost:5432/connect"
+POSTGRES_URL="postgresql://docker:docker@localhost:5432/connect"
 #://usuario/senha@endpoint:porta/nome_do_banco
 REDIS_URL="redis://localhost:6379"
