--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 PORT=3333
 
+#URLS
+
+WEB_URL="http://localhost:3000"
+
 #Database
 
 POSTGRES_URL="postgresql://docker:docker@localhost:5432/connect"
